--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "aws-amplify": "^5.0.15",
+    "aws-sdk": "^2.1318.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
