dev: installed MUI icons

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-amplify/ui-react": "^4.3.8",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
